[package]
name = "multiversx-wegld-swap-sc"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/wegld.rs"

[dependencies]
multiversx-sc = "0.41.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
multiversx-sc-wasm-adapter = "0.41.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
multiversx-sc-scenario = "0.41.1"

clap = "4.2.1"
