[package]
name = "dx25-trash-token-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
multiversx-sc-wasm-adapter = "0.41.1"

dx25-trash-token = { path = ".." }
